--- a/.editorconfig
+++ b/.editorconfig
@@ -1,8 +1,3 @@
-[*]
-end_of_line = lf
-indent_style = space
-indent_size = 2
-insert_final_newline = true
-
-[*.md]
-trim_trailing_whitespace = true
+# Tab indentation (no size specified)
+[Makefile]
+indent_style = tab
