--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,11 +1,53 @@
+fail_fast: true
 repos:
-  - repo: https://github.com/antonbabenko/pre-commit-terraform
-    rev: v1.64.0
+  - repo: https://github.com/jorisroovers/gitlint
+    rev: v0.19.1 # Fill in a tag / sha here
     hooks:
-      - id: terraform_fmt
-      - id: terraform_docs
+      - id: gitlint
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.1.0
+    rev: v4.5.0
     hooks:
-      - id: check-merge-conflict
+      - id: check-json
+        exclude: ^(.devcontainer/.*)$
+      - id: check-yaml
+        exclude: ^(.github/.*|modules/k8s-addons-pre/.*|modules/kubernetes-addons/.*)$
+      - id: check-toml
+        exclude: ^(\{\{cookiecutter.project_name\}\}/.*)$
       - id: end-of-file-fixer
+        exclude: ^(requirements-dev.txt|requirements\.txt|.*\.history|CHANGELOG.md|runConfigurations/.*|.*\.iml)$
+      - id: trailing-whitespace
+        exclude: ^(pyproject.toml)$
+      - id: check-case-conflict
+      - id: check-merge-conflict
+      - id: forbid-new-submodules
+      - id: mixed-line-ending
+        args: [ "--fix=lf" ]
+  - repo: https://github.com/psf/black
+    rev: 23.9.1
+    hooks:
+      - id: black
+        args: [ src/, tests, "--extend-exclude=tests/samples/unit/user_rules/import_exception/invalid_python.py" ]
+  - repo: https://github.com/python-poetry/poetry
+    rev: 1.8.3
+    hooks:
+      - id: poetry-check
+      - id: poetry-lock
+        args: [ "--check" ]
+  #      - id: poetry-export
+  #        args: ["--with", "dev", "--without-hashes", "-f", "requirements.txt", "-o", "requirements-dev.txt"]
+  #      - id: poetry-export
+  #        args: ["--without-hashes", "-f", "requirements.txt", "-o", "requirements.txt"]
+  - repo: local
+    hooks:
+      - id: pyproject-fmt
+        name: Run poe pyproject-fmt
+        language: system
+        entry: poetry run poe pyproject-fmt
+        always_run: true
+        pass_filenames: false
+      - id: lint
+        name: Run poe lint
+        language: system
+        entry: poetry run poe lint
+        always_run: true
+        pass_filenames: false
