feat: role_and_repos

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -20,7 +20,7 @@ parse = ^"version":\s+['"]*(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)['"]*,
 search = {current_version}
 replace = {new_version}
 
-[bumpversion:file:outputs.tf]
+[bumpversion:file:modules/consumers/outputs.tf]
 parse = ^\s+value\s+=\s+['"](?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)['"]
 search = {current_version}
 replace = {new_version}
