--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
 ]
 keywords = [ "devops","gitops",]
+package-mode = false
 
 
 [tool.poetry.urls]
